src/test/InvalidVariadic3/InvalidVariadic3.expected
error: InvalidVariadic3.panda:1:19: range operator cannot operate on these types
1 error
