src/test/InvalidVariadic3/InvalidVariadic3.panda
Console.writeLine([1, 2]..., 5, "Test")